--- a/initial_choice.html
+++ b/initial_choice.html
@@ -75,13 +75,7 @@
             margin-left: 1rem;
         }
         
-        .search-icon, .credit-icon, .notification-icon, .account-icon {
-            font-size: 1.2rem;
-            color: var(--text-color);
-            cursor: pointer;
-        }
-        
-        .register-btn {
+        .register-btn , .login-btn  {
             background-color: #0039cb;
             color: var(--white);
             border: none;
@@ -273,17 +267,11 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">New Feed</a></li>
-                <li><a href="#" class="nav-dropdown">Review</a></li>
-                <li><a href="#" class="nav-dropdown">Profile</a></li>
-                <li><a href="#" class="nav-dropdown">Support</a></li>
-                <li><a href="#" class="nav-dropdown">EduconnectGPT</a></li>
+   
             </ul>
         </nav>
         <div class="right-actions">
-            <div class="search-icon">🔍</div>
-            <div class="credit-icon">0.0 $</div>
-            <div class="notification-icon">🔔</div>
-            <div class="account-icon">👤</div>
+            <button class="login-btn">Login</button>
             <button class="register-btn">Register</button>
         </div>
     </header>
