change name again

--- a/login.html
+++ b/login.html
@@ -302,7 +302,8 @@
         <nav>
             <ul>
                 <li><a href="#">New Feed</a></li>
-                <li><a href="#">About us</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">pricing</a></li>
             </ul>
         </nav>
         <div class="right-actions">
