--- a/home.html
+++ b/home.html
@@ -674,7 +674,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.png" alt="EduConnectGPT Logo">
+            <img src="images\Educonnect_logo.png" alt="EduConnectGPT Logo">
         </div>
         <nav>
             <ul>
@@ -848,7 +848,7 @@
         <div class="footer-content">
             <div class="footer-left">
                 <div class="footer-logo">
-                    <img src="footer-logo.png" alt="EduConnectGPT Logo">
+                    <img src="images\Educonnect_logo.png" alt="EduConnectGPT Logo">
                 </div>
                 <p class="mission-statement">EduConnect - Connecting knowledge, stepping firmly into the future."</p>
                 <p class="team-credit">—EduConnect team</p>
