add another html

--- a/home.html
+++ b/home.html
@@ -675,7 +675,7 @@
                 <div class="account-dropdown">
                     <a href="#" class="dropdown-item">Profile</a>
                     <a href="#" class="dropdown-item">Setting</a>
-                    <a href="#" class="dropdown-item">Plan</a>
+                    <a href="#" class="dropdown-item">Planning</a>
                     <div class="dropdown-divider"></div>
                     <a href="#" class="dropdown-item">Sign out</a>
                 </div>
