--- a/home.html
+++ b/home.html
@@ -668,7 +668,7 @@
         </nav>
         <div class="right-actions">
             <div class="credit-icon">0.0 $</div>
-            <div class="notification-icon">🔔</div>
+            <a href="notification.html" class="notification-icon" style="text-decoration: none;">🔔</a>
             <!-- Updated account icon with dropdown -->
             <div class="account-container">
                 <div class="account-icon">👤</div>
