--- a/review.html
+++ b/review.html
@@ -460,7 +460,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Nguyễn Hoa</div>
-                    <a href="#" class="see-more-btn">See more</a>
+                    <a href="#" class="see-more-btn">★★★★</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -469,7 +469,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Phạm Anh Khoa</div>
-                    <a href="#" class="see-more-btn">See more</a>
+                    <a href="#" class="see-more-btn">★★★★★</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -478,7 +478,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Nguyễn Hữu Tùng</div>
-                    <a href="#" class="see-more-btn">See more</a>
+                    <a href="#" class="see-more-btn">★★★★</a>
                 </div>
             </div>
         </div>
