--- a/home.html
+++ b/home.html
@@ -29,12 +29,15 @@
         }
         
         header {
+            background-color: white;
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 1rem 2rem;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            background-color: var(--white);
+            position: sticky;
+            top: 0;
+            z-index: 100;
         }
         
         .logo {
