--- a/review.html
+++ b/review.html
@@ -367,7 +367,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Vũ Thanh Nhàn</div>
-                    <a href="#" class="see-more-btn">★★★★★</a>
+                    <a href="#" class="see-more-btn">See more</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -376,7 +376,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Nguyễn Hoàng Ngân</div>
-                    <a href="#" class="see-more-btn">★★★★★</a>
+                    <a href="#" class="see-more-btn">See more</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -385,7 +385,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Đặng Thanh Thủy</div>
-                    <a href="#" class="see-more-btn">★★★★★</a>
+                    <a href="#" class="see-more-btn">See more</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -394,7 +394,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Nguyễn Thủy Hiền</div>
-                    <a href="#" class="see-more-btn">★★★★★</a>
+                    <a href="#" class="see-more-btn">See more</a>
                 </div>
             </div>
         </div>
@@ -409,7 +409,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Đặng Trần Long</div>
-                    <a href="#" class="see-more-btn">★★★★★</a>
+                    <a href="#" class="see-more-btn">See more</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -418,7 +418,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Dương Hoàng Yến</div>
-                    <a href="#" class="see-more-btn">★★★★★</a>
+                    <a href="#" class="see-more-btn">See more</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -427,7 +427,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Vũ Tuyết Minh</div>
-                    <a href="#" class="see-more-btn">★★★★</a>
+                    <a href="#" class="see-more-btn">See more</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -436,7 +436,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Phạm Anh Dương</div>
-                    <a href="#" class="see-more-btn">★★★★★</a>
+                    <a href="#" class="see-more-btn">See more</a>
                 </div>
             </div>
         </div>
@@ -451,7 +451,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Nguyễn Phương Thảo</div>
-                    <a href="#" class="see-more-btn">★★★★★</a>
+                    <a href="#" class="see-more-btn">See more</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -460,7 +460,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Nguyễn Hoa</div>
-                    <a href="#" class="see-more-btn">★★★★</a>
+                    <a href="#" class="see-more-btn">See more</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -469,7 +469,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Phạm Anh Khoa</div>
-                    <a href="#" class="see-more-btn">★★★★★</a>
+                    <a href="#" class="see-more-btn">See more</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -478,7 +478,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Nguyễn Hữu Tùng</div>
-                    <a href="#" class="see-more-btn">★★★★</a>
+                    <a href="#" class="see-more-btn">See more</a>
                 </div>
             </div>
         </div>
