--- a/review.html
+++ b/review.html
@@ -133,7 +133,7 @@
 
         /* Hero Section */
         .hero {
-            background: linear-gradient(135deg, #3a0ca3 0%, #4361ee 100%);
+            background: linear-gradient(135deg, #1a0049 0%, #3c4fe0 100%);
             color: white;
             padding: 3rem 0;
             display: flex;
