--- a/ranking.html
+++ b/ranking.html
@@ -134,7 +134,7 @@
 
         /* Hero Section */
         .hero {
-            background: linear-gradient(135deg, #0a0057 0%, #2a3990 100%);
+            background: linear-gradient(135deg, #1a0049 0%, #3c4fe0 100%);
             color: white;
             padding: 4rem 5rem;
             display: flex;
@@ -377,7 +377,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/api/placeholder/180/40" alt="EduConnectGPT Logo">
+            <img src="images/Educonnect_logo.png" alt="EduConnectGPT Logo">
         </div>
         <nav>
             <ul>
@@ -541,18 +541,18 @@
         </table>
 
         <div class="pagination">
-            <a href="#" class="page-item">1</a>
+            <a href="#" class="page-item active">1</a>
             <a href="#" class="page-item">2</a>
-            <a href="#" class="page-item active">3</a>
-            <a href="#" class="page-item">12</a>
-            <a href="#" class="page-item">13</a>
-            <a href="#" class="page-item">14</a>
+            <a href="#" class="page-item">3</a>
+            <a href="#" class="page-item">4</a>
+            <a href="#" class="page-item">5</a>
+            <a href="#" class="page-item">6</a>
         </div>
     </div>
 
     <footer>
         <div class="footer-logo">
-            <img src="/api/placeholder/80/80" alt="EduConnect Logo">
+            <img src="images/Educonnect_logo.png" alt="EduConnect Logo">
             <div class="footer-tagline">
                 EduConnect - Connecting knowledge,<br>
                 stepping firmly into the future.<br>
