--- a/support.html
+++ b/support.html
@@ -130,7 +130,7 @@
 
         /* Hero Banner */
         .banner {
-            background: linear-gradient(135deg, #4b1899 0%, #3e56d9 100%);
+            background: linear-gradient(135deg, #1a0049 0%, #3c4fe0 100%);
             color: white;
             padding: 3rem 5rem;
             text-align: center;
