--- a/profile.html
+++ b/profile.html
@@ -56,20 +56,31 @@
             font-weight: 600;
         }
 
+        .animated-underline {
+        position: relative;
+        text-decoration: none;
+        }
+
         .animated-underline::after {
-            content: '';
-            position: absolute;
-            width: 0;
-            height: 2px;
-            bottom: 0;
-            left: 50%;
-            background-color: #4361ee;
-            transition: all 0.3s;
+        content: '';
+        position: absolute;
+        width: 0;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #1e40af; /* Blue color for the underline */
+        transition: width 0.3s ease-in-out;
         }
 
         .animated-underline:hover::after {
-            width: 80%;
-            left: 10%;
+        width: 100%;
+        }
+        .search-container {
+            position: relative;
+            margin-top: 1rem;
+            max-width: 600px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .right-actions {
