--- a/review.html
+++ b/review.html
@@ -342,11 +342,11 @@
             <div class="account-container">
                 <div class="account-icon">👤</div>
                 <div class="account-dropdown">
-                    <a href="#" class="dropdown-item">Profile</a>
-                    <a href="#" class="dropdown-item">Setting</a>
-                    <a href="#" class="dropdown-item">Plan</a>
+                    <a href="profile.html" class="dropdown-item">Profile</a>
+                    <a href="setting.html" class="dropdown-item">Setting</a>
+                    <a href="pricing.html" class="dropdown-item">Pricing</a>
                     <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">Sign out</a>
+                    <a href="login.html" class="dropdown-item">Sign out</a>
                 </div>
             </div>
         </div>
