--- a/login.html
+++ b/login.html
@@ -292,7 +292,7 @@
         <nav>
             <ul>
                 <li><a href="#">New Feed</a></li>
-                <li><a href="#">pricing</a></li>
+                <li><a href="#">Pricing</a></li>
             </ul>
         </nav>
     </header>
