--- a/ranking.html
+++ b/ranking.html
@@ -422,7 +422,7 @@
                 <td>
                     <div class="user-info">
                         <div class="user-avatar">
-                            <img src="/api/placeholder/40/40" alt="User Avatar">
+                            <img src="images\Lê Nguyễn Thanh Bình.jpg" alt="User Avatar">
                         </div>
                         <div>
                             <span class="user-name">Bình</span>
@@ -437,7 +437,7 @@
                 <td>
                     <div class="user-info">
                         <div class="user-avatar">
-                            <img src="/api/placeholder/40/40" alt="User Avatar">
+                            <img src="images\ảnh ranking 2.jpg" alt="User Avatar">
                         </div>
                         <div>
                             <span class="user-name">Châu</span>
@@ -452,10 +452,10 @@
                 <td>
                     <div class="user-info">
                         <div class="user-avatar">
-                            <img src="/api/placeholder/40/40" alt="User Avatar">
+                            <img src="images\ảnh ranking 3.jpg" alt="User Avatar">
                         </div>
                         <div>
-                            <span class="user-name">Ranh</span>
+                            <span class="user-name">Mạnh</span>
                             <span class="user-contacts">124 contacts</span>
                         </div>
                     </div>
@@ -467,7 +467,7 @@
                 <td>
                     <div class="user-info">
                         <div class="user-avatar">
-                            <img src="/api/placeholder/40/40" alt="User Avatar">
+                            <img src="images\ảnh ranking 4.jpg" alt="User Avatar">
                         </div>
                         <div>
                             <span class="user-name">Hiếu</span>
@@ -482,7 +482,7 @@
                 <td>
                     <div class="user-info">
                         <div class="user-avatar">
-                            <img src="/api/placeholder/40/40" alt="User Avatar">
+                            <img src="images\ảnh ranking 2.jpg" alt="User Avatar">
                         </div>
                         <div>
                             <span class="user-name">Chi</span>
@@ -497,7 +497,7 @@
                 <td>
                     <div class="user-info">
                         <div class="user-avatar">
-                            <img src="/api/placeholder/40/40" alt="User Avatar">
+                            <img src="images\ảnh ranking 3.jpg" alt="User Avatar">
                         </div>
                         <div>
                             <span class="user-name">Dung</span>
@@ -512,7 +512,7 @@
                 <td>
                     <div class="user-info">
                         <div class="user-avatar">
-                            <img src="/api/placeholder/40/40" alt="User Avatar">
+                            <img src="images\Lê Nguyễn Thanh Bình.jpg" alt="User Avatar">
                         </div>
                         <div>
                             <span class="user-name">Bình</span>
@@ -527,7 +527,7 @@
                 <td>
                     <div class="user-info">
                         <div class="user-avatar">
-                            <img src="/api/placeholder/40/40" alt="User Avatar">
+                            <img src="images\ảnh ranking 4.jpg" alt="User Avatar">
                         </div>
                         <div>
                             <span class="user-name">Bình</span>
