--- a/review.html
+++ b/review.html
@@ -363,16 +363,16 @@
         <div class="tutor-grid">
             <div class="tutor-card">
                 <div class="tutor-image">
-                    <img src="/api/placeholder/200/200" alt="Vũ Thanh Nhàn">
+                    <img src="images\Lê Nguyễn Thanh Bình.jpg" alt="Lê Nguyễn Thanh Bình">
                 </div>
                 <div class="tutor-info">
-                    <div class="tutor-name">Vũ Thanh Nhàn</div>
+                    <div class="tutor-name">Lê Nguyễn Thanh Bình</div>
                     <a href="#" class="see-more-btn">See more</a>
                 </div>
             </div>
             <div class="tutor-card">
                 <div class="tutor-image">
-                    <img src="/api/placeholder/200/200" alt="Nguyễn Hoàng Ngân">
+                    <img src="images\ảnh tutor 3.jpg" alt="Nguyễn Hoàng Ngân">
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Nguyễn Hoàng Ngân</div>
@@ -381,7 +381,7 @@
             </div>
             <div class="tutor-card">
                 <div class="tutor-image">
-                    <img src="/api/placeholder/200/200" alt="Đặng Thanh Thủy">
+                    <img src="images\ảnh tutor 4.jpg" alt="Đặng Thanh Thủy">
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Đặng Thanh Thủy</div>
@@ -390,7 +390,7 @@
             </div>
             <div class="tutor-card">
                 <div class="tutor-image">
-                    <img src="/api/placeholder/200/200" alt="Nguyễn Thủy Hiền">
+                    <img src="images\ảnh tutor 2.jpg" alt="Nguyễn Thủy Hiền">
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Nguyễn Thủy Hiền</div>
@@ -405,7 +405,7 @@
         <div class="tutor-grid">
             <div class="tutor-card">
                 <div class="tutor-image">
-                    <img src="/api/placeholder/200/200" alt="Đặng Trần Long">
+                    <img src="images\ảnh student 1.jpg" alt="Đặng Trần Long">
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Đặng Trần Long</div>
@@ -414,7 +414,7 @@
             </div>
             <div class="tutor-card">
                 <div class="tutor-image">
-                    <img src="/api/placeholder/200/200" alt="Dương Hoàng Yến">
+                    <img src="images\ảnh student 2.jpg" alt="Dương Hoàng Yến">
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Dương Hoàng Yến</div>
@@ -423,7 +423,7 @@
             </div>
             <div class="tutor-card">
                 <div class="tutor-image">
-                    <img src="/api/placeholder/200/200" alt="Vũ Tuyết Minh">
+                    <img src="images\ảnh student 3.jpg" alt="Vũ Tuyết Minh">
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Vũ Tuyết Minh</div>
@@ -432,7 +432,7 @@
             </div>
             <div class="tutor-card">
                 <div class="tutor-image">
-                    <img src="/api/placeholder/200/200" alt="Phạm Anh Dương">
+                    <img src="images\ảnh student 4.jpg" alt="Phạm Anh Dương">
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Phạm Anh Dương</div>
@@ -447,7 +447,7 @@
         <div class="tutor-grid">
             <div class="tutor-card">
                 <div class="tutor-image">
-                    <img src="/api/placeholder/200/200" alt="Nguyễn Phương Thảo">
+                    <img src="images\ảnh course 1.png" alt="Nguyễn Phương Thảo">
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Nguyễn Phương Thảo</div>
@@ -456,28 +456,28 @@
             </div>
             <div class="tutor-card">
                 <div class="tutor-image">
-                    <img src="/api/placeholder/200/200" alt="Nguyễn Hoa">
+                    <img src="images\ảnh course 3.jpg" alt="Nguyễn Hoa">
                 </div>
                 <div class="tutor-info">
-                    <div class="tutor-name">Nguyễn Hoa</div>
+                    <div class="tutor-name">Minh Thu</div>
                     <a href="#" class="see-more-btn">See more</a>
                 </div>
             </div>
             <div class="tutor-card">
                 <div class="tutor-image">
-                    <img src="/api/placeholder/200/200" alt="Phạm Anh Khoa">
+                    <img src="images\ảnh course 2.jpg" alt="Phạm Anh Khoa">
                 </div>
                 <div class="tutor-info">
-                    <div class="tutor-name">Phạm Anh Khoa</div>
+                    <div class="tutor-name">Đặng Nhung</div>
                     <a href="#" class="see-more-btn">See more</a>
                 </div>
             </div>
             <div class="tutor-card">
                 <div class="tutor-image">
-                    <img src="/api/placeholder/200/200" alt="Nguyễn Hữu Tùng">
+                    <img src="images\ảnh course 4.jpg" alt="Nguyễn Hữu Tùng">
                 </div>
                 <div class="tutor-info">
-                    <div class="tutor-name">Nguyễn Hữu Tùng</div>
+                    <div class="tutor-name">Minh Thu</div>
                     <a href="#" class="see-more-btn">See more</a>
                 </div>
             </div>
