--- a/home.html
+++ b/home.html
@@ -1508,6 +1508,12 @@
                     </div>
 
                     <div class="comment-section">
+                        <div class="comments-display-area">
+                        </div>
+                        <div class="comment-input-area">
+                            <textarea class="comment-input" placeholder="Write a comment..."></textarea>
+                            <button class="message-btn post-comment-btn">Post</button>
+                        </div>
                     </div>
 
                     <div class="tutor-list-dropdown">
